--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-hubspot-form": "^1.3.7",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "serve": "^14.2.0",
