--- a/backends/flask-api/requirements.txt
+++ b/backends/flask-api/requirements.txt
@@ -15,7 +15,9 @@ MarkupSafe==2.1.1
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python-dotenv==0.21.0
+requests==2.28.2
 six==1.16.0
 SQLAlchemy==1.4.43
+twilio==8.2.0
 Werkzeug==2.2.2
 zipp==3.10.0
