--- a/frontends/clients/nextjs/package.json
+++ b/frontends/clients/nextjs/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
